--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="scss/styles.scss">
-</head>
-<body class="main-grid">
-  <header class="main-header">header</header>
-  <main class="card__container">
-    <section class="card">
-      <p class="card__question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste quam impedit in. Harum dolor praesentium consequuntur sequi est enim.</p>
-    </section>
-    <section class="card">
-      <p class="card__question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste quam impedit in. Harum dolor praesentium consequuntur sequi est enim.</p>
-    </section>
-    <section class="card">
-      <p class="card__question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste quam impedit in. Harum dolor praesentium consequuntur sequi est enim.</p>
-    </section>
-    <section class="card">
-      <p class="card__question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste quam impedit in. Harum dolor praesentium consequuntur sequi est enim.</p>
-    </section>
-  </main>
-  <nav class="navigation">
-    <a class="navigation__link navigation__link--active" href="/">H</a>
-    <a class="navigation__link" href="/bookmarks.html">B</a>
-    <a class="navigation__link" href="/create.html">C</a>
-    <a class="navigation__link" href="/profile.html">P</a>
-  </nav>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Quiz App</title>
+    <link rel="stylesheet" href="scss/styles.scss" />
+  </head>
+  <body class="main-grid">
+    <header class="main-header">Quiz App</header>
+    <main class="card__container scrollable">
+      <section class="card">
+        <h1>Question</h1>
+        <p class="card__question">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
+          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
+        </p>
+
+        <div class="flex-center">
+          <button class="card__btn">Show Answer</button>
+        </div>
+        <ul class="noneliststyle card__hints">
+          <li>item 1</li>
+          <li>item 2</li>
+          <li>item 3</li>
+          <li>item 4</li>
+        </ul>
+      </section>
+      <section class="card">
+        <h1>Question</h1>
+        <p class="card__question">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
+          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
+        </p>
+
+        <div class="flex-center">
+          <button class="card__btn">Show Answer</button>
+        </div>
+        <ul class="noneliststyle card__hints">
+          <li>item 1</li>
+          <li>item 2</li>
+          <li>item 3</li>
+          <li>item 4</li>
+        </ul>
+      </section>
+      <section class="card">
+        <h1>Question</h1>
+        <p class="card__question">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
+          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
+        </p>
+
+        <div class="flex-center">
+          <button class="card__btn">Show Answer</button>
+        </div>
+        <ul class="noneliststyle card__hints">
+          <li>item 1</li>
+          <li>item 2</li>
+          <li>item 3</li>
+          <li>item 4</li>
+        </ul>
+      </section>
+
+      <section class="card">
+        <h1>Question</h1>
+        <p class="card__question">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
+          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
+        </p>
+
+        <div class="flex-center">
+          <button class="card__btn">Show Answer</button>
+        </div>
+        <ul class="noneliststyle card__hints">
+          <li>item 1</li>
+          <li>item 2</li>
+          <li>item 3</li>
+          <li>item 4</li>
+        </ul>
+      </section>
+    </main>
+    <nav class="navigation">
+      <a class="navigation__link navigation__link--active" href="/">H</a>
+      <a class="navigation__link" href="/bookmarks.html">B</a>
+      <a class="navigation__link" href="/create.html">C</a>
+      <a class="navigation__link" href="/profile.html">P</a>
+    </nav>
+  </body>
 </html>
