--- a/src/index.html
+++ b/src/index.html
@@ -72,9 +72,9 @@
           dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
           quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
         </p>
-        <div class="flex-center">
-          <button class="card__btn p-10">Show Answer</button>
-        </div>
+
+        <button class="p-10 mx-auto">Show Answer</button>
+
         <ul class="noneliststyle card__hints">
           <li>hint 1</li>
           <li>hint 2</li>
