Add questions and tags

--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -15,37 +15,28 @@
     <header class="main-header">Bookmarks</header>
     <main class="card__container scrollable">
       <section class="card mb-10">
-        <h1>Question</h1>
+        <h1>Question 2</h1>
         <p class="card__question">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
-          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
+          Welcher Agent steht im Zusammenhang mit der "Lizenz zum Töten"?
         </p>
-        <div class="flex-center">
-          <button class="card__btn p-10">Show Answer</button>
-        </div>
+        <button class="p-10 mx-auto">Show Answer</button>
         <ul class="noneliststyle card__hints">
-          <li>hint 1</li>
-          <li>hint 2</li>
-          <li>hint 3</li>
-          <li>hint 4</li>
+          <li>007</li>
+          <li>MI6</li>
+          <li>Miss Moneypenny</li>
         </ul>
       </section>
       <section class="card mb-10">
-        <h1>Question</h1>
+        <h1>Question 3</h1>
         <p class="card__question">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
-          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
+          Welches Betriebssystem stammt von Apple?
         </p>
-        <div class="flex-center">
-          <button class="card__btn p-10">Show Answer</button>
-        </div>
+        <button class="p-10 mx-auto">Show Answer</button>
+
         <ul class="noneliststyle card__hints">
-          <li>hint 1</li>
-          <li>hint 2</li>
-          <li>hint 3</li>
-          <li>hint 4</li>
+          <li>iPad</li>
+          <li>iPhone</li>
+          <li>iPod touch</li>
         </ul>
       </section>
     </main>
