--- a/src/profile.html
+++ b/src/profile.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Quiz App</title>
+    <link rel="stylesheet" href="scss/styles.scss" />
 
-</body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,200;0,400;0,500;1,100&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="main-grid">
+    <header class="main-header">Profil</header>
+    <main></main>
+    <nav class="navigation">
+      <a class="navigation__link" href="/index.html"
+        ><img src="img/house.png" alt=""
+      /></a>
+      <a class="navigation__link" href="/bookmarks.html"
+        ><img src="img/bookmark-ribbon.png" alt=""
+      /></a>
+      <a class="navigation__link" href="/create.html"
+        ><img src="img/list.png" alt=""
+      /></a>
+      <a class="navigation__link navigation__link--active" href="/"
+        ><img src="img/administrator-male.png" alt=""
+      /></a>
+    </nav>
+  </body>
 </html>
