--- a/src/index.html
+++ b/src/index.html
@@ -15,71 +15,54 @@
     <header class="main-header">Quiz App</header>
     <main class="card__container scrollable">
       <section class="card mb-10">
-        <h1>Question</h1>
+        <h1>Question 1</h1>
         <p class="card__question">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
-          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
+          What is the capital of France?
         </p>
-        <div class="flex-center">
-          <button class="card__btn p-10">Show Answer</button>
-        </div>
-        <ul class="noneliststyle card__hints">
-          <li>hint 1</li>
-          <li>hint 2</li>
-          <li>hint 3</li>
-          <li>hint 4</li>
-        </ul>
-      </section>
-      <section class="card mb-10">
-        <h1>Question</h1>
-        <p class="card__question">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
-          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
-        </p>
-        <div class="flex-center">
-          <button class="card__btn p-10">Show Answer</button>
-        </div>
-        <ul class="noneliststyle card__hints">
-          <li>hint 1</li>
-          <li>hint 2</li>
-          <li>hint 3</li>
-          <li>hint 4</li>
-        </ul>
-      </section>
-      <section class="card mb-10">
-        <h1>Question</h1>
-        <p class="card__question">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
-          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
-        </p>
-        <div class="flex-center">
-          <button class="card__btn p-10">Show Answer</button>
-        </div>
-        <ul class="noneliststyle card__hints">
-          <li>hint 1</li>
-          <li>hint 2</li>
-          <li>hint 3</li>
-          <li>hint 4</li>
-        </ul>
-      </section>
-      <section class="card mb-10">
-        <h1>Question</h1>
-        <p class="card__question">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
-          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
-        </p>
-
         <button class="p-10 mx-auto">Show Answer</button>
 
         <ul class="noneliststyle card__hints">
-          <li>hint 1</li>
-          <li>hint 2</li>
-          <li>hint 3</li>
-          <li>hint 4</li>
+          <li>Seine</li>
+          <li>Louvre</li>
+          <li>Eifel tower</li>
+        </ul>
+      </section>
+      <section class="card mb-10">
+        <h1>Question 2</h1>
+        <p class="card__question">
+          Welcher Agent steht im Zusammenhang mit der "Lizenz zum Töten"?
+        </p>
+        <button class="p-10 mx-auto">Show Answer</button>
+
+        <ul class="noneliststyle card__hints">
+          <li>007</li>
+          <li>MI6</li>
+          <li>Miss Moneypenny</li>
+        </ul>
+      </section>
+      <section class="card mb-10">
+        <h1>Question 3</h1>
+        <p class="card__question">
+          Welches Betriebssystem stammt von Apple?
+        </p>
+        <button class="p-10 mx-auto">Show Answer</button>
+
+        <ul class="noneliststyle card__hints">
+          <li>iPad</li>
+          <li>iPhone</li>
+          <li>iPod touch</li>
+        </ul>
+      </section>
+      <section class="card mb-10">
+        <h1>Question 4</h1>
+        <p class="card__question">
+          Wie lautet die Hauptstadt von Bayern?
+        </p>
+        <button class="p-10 mx-auto">Show Answer</button>
+        <ul class="noneliststyle card__hints">
+          <li>Oktoberfest</li>
+          <li>Isar</li>
+          <li>Frauenkirche</li>
         </ul>
       </section>
     </main>
